--- a/Harjoitus/style.css
+++ b/Harjoitus/style.css
@@ -1,22 +1,26 @@
 html {	background-color: #bcbcbc;	
 }
 
-
+body {margin:auto; max-width: 700px;}
 
 div { background-color: #e3e3e3; 
 border: 1px solid black;
+text-align: center;
 }
 
 
 
 h1 { font-family: consolas, Arial; 
 color: #de6fa1;
+text-align: center;
 }
 
 
 
 h2 {	font-family: consolas, Arial;
 color: black;
+border: 1px solid black;
+background-color: #de6fa1;
 }
 
 
@@ -24,3 +28,5 @@ color: black;
 p {	font-family: consolas, Arial;
 color: black;
 }
+
+.jee{ float:left }
